plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.3'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'umc'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testImplementation 'org.mockito:mockito-inline:5.2.0'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    runtimeOnly 'com.mysql:mysql-connector-j:8.0.33'

	// swagger
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.7.0'

	// jwt 0.12.6
	implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'

	//jsoup
	implementation 'org.jsoup:jsoup:1.16.1'

	// AWS S3
	implementation 'software.amazon.awssdk:s3:2.28.15'
	implementation 'software.amazon.awssdk:auth:2.28.15'

	// 스프링 캐시 표준 기능
	implementation 'org.springframework.boot:spring-boot-starter-cache'
	// 카페인 캐시 엔진
	implementation 'com.github.ben-manes.caffeine:caffeine'
	// 캐시 모니터링 액츄에이터
	implementation 'org.springframework.boot:spring-boot-starter-actuator'

	// 이메일에 코드 전송
	implementation 'org.springframework.boot:spring-boot-starter-mail'

	// CI용 가짜 db
	testImplementation 'com.h2database:h2'

}

test {
	useJUnitPlatform {
		def inc = System.getProperty("junit.jupiter.tags.include")
		if (inc) {
			includeTags inc.split(',') as String[]
		}
		def exc = System.getProperty("junit.jupiter.tags.exclude")
		if (exc) {
			excludeTags exc.split(',') as String[]
		}
	}
}
